utopia-project/force-app/main/default/objects/Hard_No__mdt/Hard_No__mdt.object-meta.xml
<CustomObject>
    <label>Hard No</label>
    <pluralLabel>Hard Nos</pluralLabel>
</CustomObject>