utopia-project/force-app/main/default/objects/Hard_No__mdt/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <label>Keywords</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>