utopia-project/force-app/main/default/objects/Hard_No__mdt/fields/Negotiable__c.field-meta.xml
<CustomField>
    <fullName>Negotiable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Negotiable</label>
    <type>Checkbox</type>
</CustomField>