utopia-project/force-app/main/default/objects/Hard_No__mdt/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>