utopia-project/force-app/main/default/objects/Hard_No__mdt/fields/Recommended_Response__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Response__c</fullName>
    <label>Recommended Response</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>